--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "lucide-react": "^0.268.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.45.4",
         "react-player": "^2.12.0",
         "react-router-dom": "^6.15.0"
     },
