--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "jotai": "^2.3.1",
         "lucide-react": "^0.268.0",
         "react": "^18.2.0",
+        "react-csv": "^2.2.2",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.45.4",
         "react-player": "^2.12.0",
