--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react": "^18.2.0",
         "react-csv": "^2.2.2",
         "react-dom": "^18.2.0",
+        "react-draggable": "^4.4.5",
         "react-hook-form": "^7.45.4",
         "react-player": "^2.12.0",
         "react-router-dom": "^6.15.0"
